@startuml Template_Method_Pattern
skinparam backgroundColor #FAFAFA
skinparam defaultFontName Arial
skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
skinparam noteBackgroundColor #FFFFEE
skinparam noteBorderColor #AAAAAA
hide empty members

title ScribeHealth AI — Template Method Pattern\nSoapNoteGenerator (NFR-03: Extensibility)

note as N1
  Pattern: Template Method (GoF Behavioral)
  Location: frontend/lib/soap-note-generator.ts
  NFR addressed: NFR-03 Extensibility
  Motivation: All SOAP generators follow the same algorithm skeleton.
  Only specialty context and field list vary per template.
  New specialty = 1 new subclass. API route is never modified.
end note

package "Abstract Class (Template)" #E8F5E9 {
  abstract class SoapNoteGenerator {
    + {abstract} templateName : string
    + {abstract} fields : readonly string[]
    + generate(transcript, client: Anthropic) : Promise<Record<string,string>>
    .. Template Method — fixed skeleton ..
      1. specialtyContext() → context string
      2. callModel(transcript, client) → raw JSON
      3. normaliseFields(raw) → keyed result
    # specialtyContext() : string  <<hook — override in subclass>>
    - callModel(transcript, client) : Promise<Record<string,string>>  <<invariant>>
    - normaliseFields(raw) : Record<string,string>  <<invariant>>
  }
}

package "Concrete Subclasses" #FFFACD {
  class GeneralOpdNoteGenerator {
    + templateName = "general_opd"
    + fields = [subjective, objective, assessment,\n  diagnosis, prescription, advice, follow_up]
  }

  class MentalHealthNoteGenerator {
    + templateName = "mental_health_soap"
    + fields = [subjective, objective, assessment,\n  plan, safety_assessment]
    # specialtyContext() → "mental health and psychiatry"
  }

  class PhysiotherapyNoteGenerator {
    + templateName = "physiotherapy"
    + fields = [subjective, objective, assessment,\n  treatment, home_exercise_program, plan]
    # specialtyContext() → "physiotherapy and rehabilitation"
  }

  class PediatricNoteGenerator {
    + templateName = "pediatric"
    + fields = [subjective, objective, assessment,\n  plan, parent_instructions, follow_up]
    # specialtyContext() → "paediatrics"
  }

  class CardiologyNoteGenerator {
    + templateName = "cardiology"
    + fields = [subjective, objective, assessment,\n  plan, medications, follow_up]
    # specialtyContext() → "cardiology and cardiovascular medicine"
  }

  class SurgicalFollowupNoteGenerator {
    + templateName = "surgical_followup"
    + fields = [wound_assessment, subjective, objective,\n  assessment, plan, next_review]
    # specialtyContext() → "post-operative surgical follow-up"
  }

  class NewSpecialtyGenerator <<(future extension)>> #F4F6F7 {
    + templateName = "new_specialty"
    + fields = [...]
    # specialtyContext() → "..."
  }
}

package "Selector" #FDEBD0 {
  class NoteGeneratorFactory {
    - GENERATORS : SoapNoteGenerator[]
    + {static} get(templateName: string) : SoapNoteGenerator
    + {static} templateNames() : string[]
    .. logic ..
    GENERATORS.find(g => g.templateName === name)
    ?? new GeneralOpdNoteGenerator()
  }
}

package "Client" #D6EAF8 {
  class GenerateNoteRoute <<POST /api/generate-note>> {
    + POST(req) : NextResponse
    .. uses ..
    const gen = NoteGeneratorFactory.get(templateName)
    const soap = await gen.generate(transcript, anthropicClient)
  }
}

GeneralOpdNoteGenerator       --|> SoapNoteGenerator
MentalHealthNoteGenerator     --|> SoapNoteGenerator
PhysiotherapyNoteGenerator    --|> SoapNoteGenerator
PediatricNoteGenerator        --|> SoapNoteGenerator
CardiologyNoteGenerator       --|> SoapNoteGenerator
SurgicalFollowupNoteGenerator --|> SoapNoteGenerator
NewSpecialtyGenerator         --|> SoapNoteGenerator

NoteGeneratorFactory  ..> SoapNoteGenerator  : <<selects & returns>>
GenerateNoteRoute --> NoteGeneratorFactory    : "NoteGeneratorFactory.get(templateName)"
GenerateNoteRoute --> SoapNoteGenerator       : "gen.generate(transcript, client)"

note bottom of NoteGeneratorFactory
  Extension rule (Open/Closed Principle):
  1. Extend SoapNoteGenerator
  2. Set templateName + fields
  3. Override specialtyContext() if needed
  4. Add instance to GENERATORS array
  → Zero changes to API routes or calling code
end note

@enduml
